# ollama-web-search

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  TEST_PLAN.md  com.mab.mira.plist  com.mab.mira.plist.template  config.py  db.py  file_handler.py  formatter.py  fs_tools.py  hardware-specs.md  main.py  mira.yaml.example  orchestrator.py  prompts.py  pyproject.toml  rag_engine.py  search_engine.py  server.py  shell_tools.py  start-mira-server.sh  start-mira-server.sh.template  tools.py  workspace.py
core/: backend_manager.py  config.py  db.py  formatter.py  fs_tools.py  github_tools.py  orchestrator.py  prompts.py  rag_engine.py  search_engine.py  shell_tools.py  tools.py  url_fetcher.py  workspace.py
docs/: architecture.md  dev-reference.md  diagram.md  model-comparison-m5-macbook.md  omlx-ctl.md
static/: index.html
tests/: conftest.py  test_cancel.py  test_coding_tools.py  test_fs_shell_tools.py  test_github_tools.py  test_queries.py  test_workspace.py
