[project]
name = "ollama-search-tool"
version = "0.1.0"
description = "Local AI assistant with autonomous web search using Gemma 4 and Ollama"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "ddgs>=6.0.0",
    "rich>=13.0.0",
    "markdown>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
