[project]
name = "ollama-search-tool"
version = "0.1.0"
description = "Local AI assistant with autonomous web search using Gemma 4 and Ollama"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "ddgs>=6.0.0",
    "rich>=13.0.0",
    "markdown>=3.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "pymupdf>=1.27.2.2",
    "beautifulsoup4>=4.14.3",
    "python-multipart>=0.0.22",
    "chromadb>=1.5.5",
    "sentence-transformers>=5.3.0",
    "zeroconf>=0.131.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
