[project]
name = "ollama-search-tool"
version = "0.1.0"
description = "Local AI assistant with autonomous web search using Gemma 4 and Ollama"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0,<2.0.0",
    "ddgs>=6.0.0,<9.0.0",
    "rich>=13.0.0,<15.0.0",
    "markdown>=3.5.0,<4.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    "pymupdf>=1.27.2.2,<2.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "chromadb>=1.5.5,<2.0.0",
    "sentence-transformers>=5.3.0,<6.0.0",
    "zeroconf>=0.131.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
